--- a/style.css
+++ b/style.css
@@ -12,11 +12,96 @@ html, body {
 }
 /* MOBILE FIRST 320-767px*/
 /*------------------------------HEADER-------------------------------------*/
-
+#title__bar{
+    text-align: left;
+    width: 60%; 
+}
 /*-----------------------------CUERPO-------------------------------------*/
+
+/*-----------------------------HOME-------------------------------------*/
+
+form{
+    width: 30%;
+    padding-left: 35%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;  
+}
+
+
+input , textarea{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-width: 0.1rem;
+    border-color: rgb(128, 128, 128);
+    resize:none;
+}
+
+ input[type=submit] {
+    width: 4rem;
+    background-color: rgb(59, 139, 139);
+    color: white;
+    padding-top:0.7rem;
+    padding-bottom:0.7rem;
+    border-radius: 0.7rem;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;     
+  } 
+
+  .gridd{
+    display: grid;
+    width: 50%;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 2rem;
+    align-items: center;
+    padding-top: 1rem;
+    padding-left: 25%;
+    padding-bottom: 2rem; 
+
+}
+
+
+.flex{
+    display: flex;
+    justify-content: center;
+    height: 3rem;
+    gap: 2rem;
+
+    /* padding-top: 1.5rem; */
+
+} 
+
+
+a{
+    color: black;
+    text-decoration: none;
+}
+/*------------------------------------------------------------------*/
+
 
 /*-----------------------------FOOTER----------------------------------*/
  
+
+footer{
+    text-align: center;
+    width: 100%;
+    height: 5%;
+}
+#copyRight{
+    font-size: 14px;
+    padding-bottom: 1%;
+  }
+
+  .foot__redes__flexBox{
+background-color: black;
+  }
+
 
 /*------------------------------ RESPONSIVE ------------------------------*/
 @media screen and (min-width: 768px) {
