--- a/historia.css
+++ b/historia.css
@@ -1,13 +1,27 @@
+@charset "utf-8";
 *{
     margin: 0;
     padding:0;
 }
+header {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+     padding-top: 1rem;
+
+
+}
 .amorobieta{
-padding: 2rem;
+padding: 3rem;
 
 }
 
 .estadio-imgen img{
     width: 20rem ;
     height: 17rem  ;  
+}
+.amorbi {border-radius: 1rem;
+    display: flex;
+   justify-content: center;  
 }
