--- a/homeStyle.css
+++ b/homeStyle.css
@@ -71,17 +71,21 @@ a{
     background-repeat: no-repeat; 
     background-size: cover;
 
-    text-align: center;
+    /* text-align: center; */
 
     height: 40rem;
     grid-column: 1/3;
+
+    fill: #fff;
+    mask: url(#hero-home-mask);
 
 }
 
 #menu{
     justify-content: space-around;
     grid-column: 1/3;
-    background-color: cornflowerblue; 
+    padding-top: 3rem;
+    /* background-color: cornflowerblue;  */
 
 
 }
@@ -138,8 +142,9 @@ input , textarea{
 
 h1{
     color:white;
-    font-size: 30px;
-    text-align: center;
+    position: relative;
+    font-size: 50px;
+    padding-left: 0%;
 }
 
 .foot__patrocinadores > h2{
