--- a/homeStyle.css
+++ b/homeStyle.css
@@ -161,7 +161,8 @@ input , textarea{
     linear-gradient(to right, rgba(48, 7, 231,0.5), rgba(255, 255, 255, 0.5)); */
     /* background: linear-gradient(to right, rgba(48, 7, 231,0.5), rgba(255, 122, 89,0,5)); */
     background-image: linear-gradient(to right, rgba(48, 7, 231,0.8), rgba(230, 40, 40, 0.8)), url("https://sdamorebieta.eus/wp-content/uploads/2022/09/urritxe-corner.jpg");
-
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .patrocinador{
