--- a/homeStyle.css
+++ b/homeStyle.css
@@ -25,7 +25,7 @@ html, body {
 
 
 .gridd_home_item{
-    border: 4px solid  black;
+    /* border: 4px solid  black; */
     text-align: center;
     /* line-height: 150px; */
 }
@@ -48,7 +48,7 @@ html, body {
 }
 
 .flex_body_item{
-    border: solid black;
+    /* border: solid black; */
     /* padding-top: 2rem; */
 
 }
@@ -95,7 +95,7 @@ a{
     transition: 0.7s;
     background-color: white;
     opacity:0.9;
-    background: rgba(255, 122, 89, .5);
+    /* background: rgba(255, 122, 89, .5); */
 }
 
 .menu_logo{
@@ -111,10 +111,21 @@ a{
 
 
 h1{
-    color:transparent;
-    position: relative;
-    font-size: 40px;
-    padding-top: 12%;
+    /* color:white; */
+    /* color:transparent; */
+
+    color: rgba(247, 8, 8, 0.5);
+    background-image: url(./img/header-image.png);
+
+    background-clip: text;
+    -webkit-background-clip:text ;
+
+    position: absolute;
+    font-size: 90px;
+    /* padding-top: 5%; */
+    /* padding-left: 25%; */
+    padding-left: 30%;
+
 }
 
 /*-----------------------------Formulario-------------------------------------*/
@@ -157,34 +168,45 @@ input , textarea{
 
 #footer{
     grid-column: 1/3;
-    /* background-image: url(https://sdamorebieta.eus/wp-content/uploads/2022/09/urritxe-corner.jpg),
-    linear-gradient(to right, rgba(48, 7, 231,0.5), rgba(255, 255, 255, 0.5)); */
-    /* background: linear-gradient(to right, rgba(48, 7, 231,0.5), rgba(255, 122, 89,0,5)); */
-    background-image: linear-gradient(to right, rgba(48, 7, 231,0.8), rgba(230, 40, 40, 0.8)), url("https://sdamorebieta.eus/wp-content/uploads/2022/09/urritxe-corner.jpg");
+    background-image: linear-gradient(to right, rgba(48, 7, 231,0.8), rgba(230, 40, 40, 0.9)), url("https://sdamorebieta.eus/wp-content/uploads/2022/09/equipo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .patrocinador{
-    width: 15rem;
+    width: 20rem;
 }
 
 .foot__patrocinadores_div{
     gap:2rem;
     padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-bottom: 5rem;
 }
 
 .foot__legal{
-    /* background-color: cornflowerblue;   */
+    background-color: rgb(46, 46, 112);
+    color: white;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 h2{
     padding-top: 2rem;
     padding-bottom: 2rem;
+    color: white;
 }
 
 .foot__redes{
     /* background-image: url(https://sdamorebieta.eus/wp-content/uploads/2022/09/urritxe-corner.jpg);  */
+    background-color: rgb(46, 46, 112);
+    padding-bottom: 1rem;
+
 }
 
+#copyRight{
+    padding-bottom: 1rem;
+}
+
+.foot__legal a{
+    color: white;
+}
