--- a/homeStyle.css
+++ b/homeStyle.css
@@ -190,7 +190,7 @@ input , textarea{
     padding-bottom: 2rem;
 }
 
-h2{
+.h2--home{
     padding-top: 2rem;
     padding-bottom: 2rem;
     color: white;
