--- a/equipostyle.css
+++ b/equipostyle.css
@@ -1,11 +1,19 @@
 
+/* .logo{
+  width: 50%;
+  height: 4rem;
+} */
+
 .fotosCategorias{
     display: grid;
     grid-template-columns: auto auto;  
 }
 
-body{
-    background-image: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
+
+
+.body--equipos{
+  background-image: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
+  text-align: center;
 }
 
 
@@ -29,107 +37,7 @@ body{
     height: 70%;
 }
 
-/*menu*/
 
-.menu {
-    
-    
-    height: auto;
-    width: 80%;
-    margin: 0;
-    overflow: hidden;
-  }
-  
-  /* Bordes superiores */
-  
-  .menu.mascPro {
-    border-top: #2f00ff 0.3em solid;
-  }
-  
-  .menu.inf {
-    border-top: #b81800 0.3em solid;
-  }
-  
-  .menu.juv {
-    border-top: #00a53c 0.3em solid;
-  }
-  
-  .menu.femPro {
-    border-top: #9600b4 0.3em solid;
-  }
-  
-  /* Atributos y transición */
-  
-  .menu > span {
-    display: block;
-    position: absolute;
-    overflow: hidden;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 0%;
-    transition: 0.5s ease-in-out;
-    -webkit-transition: 0.5s ease-in-out;
-  }
-  
-  .menu:after, .menu > span > span {
-    display: block;
-    text-align: center;
-    border-radius: 0em;
-    padding: 2em 0 1.5em;
-  }
-  
-  .menu:after {
-    content: attr(data-title);
-    width: 100%;
-    background: #000;
-    color: #fff; 
-  }
-  
-  .menu > span > span {
-    width: 120px;
-    color: #fff;
-  }
-  
-  .menu.mascPro > span > span {
-    background: #2f00ff;
-  }
-  
-  .menu.juv > span > span {
-    background: #00a53c;
-  }
-  
-  .menu.inf > span > span {
-    background: #b81800;
-  }
-  
-  .menu.femPro > span > span {
-      background: #9600b4;
-  }
-  
-  /* Lo que pasa con hover */
-  
-  .menu:hover > span {
-      height: 100%; 
-  }
-  
-  /* Dando formato a lista */ 
-  
-  ul {
-    display: flex;
-    
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-
- 
-    li a {
-    display: inline;
-    float: left;
-    text-decoration: none;
-    font-family: sans;
-  }
 
   /*Transiciones Imagenes*/
 
@@ -173,43 +81,53 @@ body{
 
   .amorePro{     
     border: black 1rem solid;
-    margin: 5rem;
-    font-size: 3rem;
+    margin-right: 30rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   .amoreFem{
     border: black 1rem solid;
-    margin: 5rem;
-    font-size: 3rem;
+    margin-right: 30rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   }
 
   .amoreJuv{
     border: black 1rem solid;
-    margin: 5rem;
-    font-size: 3rem;
+    margin-right: 30rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   }
 
   .amoreInf{
     border: black 1rem solid;
-    margin: 5rem;
-    font-size: 3rem;
+    margin-right: 30rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   }
 
+  /*Titulo (h1)*/
+
+    font-size: 8rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+
   /*Titulos (h2)*/
 
-  h2{
+  .h2--equipos{
     font-size: 5rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   }
 
+
+
+
+
   
-
-
+  
+ 
