--- a/actualidad.css
+++ b/actualidad.css
@@ -2,26 +2,27 @@
     margin: 0;
     padding: 0;
 }
-h2{
+.noticias_h2{
     padding: 1.8rem;
     text-align: center;
 }
+
+
+
 .noticias_section{
- 
- width: 75%;
- display: flex;
- justify-content: center;
- flex-direction: column;
- margin: 0 auto;
+width: 40rem;
+margin: 0 auto;
+
+
+
 }
 .noticias_imagen {
   width: 40rem;
-  height: 20rem;
-  padding-bottom: 1.8rem;
-  background-image: url("../img/actualidad01.jpg");
- background-position:center;
+  padding-bottom: 0.8rem;
+  
+
 }
 .noticias_article{
-   margin-left: 0.6rem; 
-    
+   text-align: justify;
+   padding: 0.6rem;
 }
