--- a/homeStyle.css
+++ b/homeStyle.css
@@ -173,21 +173,25 @@ input , textarea{
 .futPro{
     width: 70%;
     height: 70%;
+    border-radius: 40%;
 }
 
 .femFutPro{
     width: 65%;
     height: 65%;
+    border-radius: 40%;
 }
 
 .futJuv{
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
+    border-radius: 40%;
 }
 
 .futInfantil{
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
+    border-radius: 40%;
 }
 
   /*Transiciones Imagenes*/
@@ -195,7 +199,7 @@ input , textarea{
   .futPro{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);
+    background-color: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .futPro:hover{
     padding: 4rem;
@@ -204,7 +208,7 @@ input , textarea{
   .femFutPro{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);;
+    background-color:linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .femFutPro:hover{
     padding: 4rem;
@@ -213,7 +217,7 @@ input , textarea{
   .futJuv{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);;
+    background-color:linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .futJuv:hover{
     padding: 4rem;
@@ -222,7 +226,7 @@ input , textarea{
   .futInfantil{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);;
+    background-color: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .futInfantil:hover{
     padding: 4rem;
@@ -240,9 +244,19 @@ input , textarea{
   }
 
   .h2--equipos{
-    font-size: 5rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2rem;
+    color: rgb(13, 13, 13);  
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    
+  }
 
+  .h1--equipos{
+    font-size: 3rem; 
+    color: rgb(69, 7, 226); 
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    
   }
   
 /*----------------------------- FIN EQUIPOS-------------------------------------*/
