--- a/homeStyle.css
+++ b/homeStyle.css
@@ -19,15 +19,12 @@ html, body {
 .gridd_home{
     display: grid;
     grid-template-columns: 80% 20%;
-    /* grid-row: 5% 30% auto auto 10%; */
     justify-content: stretch;
 }
 
 
 .gridd_home_item{
-    /* border: 4px solid  black; */
     text-align: center;
-    /* line-height: 150px; */
 }
 
 
@@ -44,14 +41,9 @@ html, body {
 .flex_colum{
     display: flex;
     flex-direction: column;
-    /* gap: 1rem; */
 }
 
-.flex_body_item{
-    /* border: solid black; */
-    /* padding-top: 2rem; */
 
-}
 
 .about_img{
 
@@ -132,7 +124,7 @@ form{
 }
 
 
-input , textarea{
+.contac_form_text{
     border-top: none;
     border-left: none;
     border-right: none;
@@ -153,6 +145,9 @@ input , textarea{
   input[type=submit]:hover {
     background-color: #45a049;
   }
+
+    /*----------------------------- FIN HOME-------------------------------------*/
+
 
   /*-----------------------------EQUIPOS-------------------------------------*/
 
