--- a/homeStyle.css
+++ b/homeStyle.css
@@ -195,7 +195,7 @@ input , textarea{
   .futPro{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);
+    background-color: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .futPro:hover{
     padding: 4rem;
@@ -204,7 +204,7 @@ input , textarea{
   .femFutPro{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);;
+    background-color: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .femFutPro:hover{
     padding: 4rem;
@@ -213,7 +213,7 @@ input , textarea{
   .futJuv{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);;
+    background-color: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .futJuv:hover{
     padding: 4rem;
@@ -222,7 +222,7 @@ input , textarea{
   .futInfantil{
     -webkit-transition: 1s linear;
     transition: 1s linear;
-    background-color: rgb(34, 58, 177);;
+    background-color: linear-gradient(180deg, #bee2ff 0, #5096cc 50%, #005197 100%);
   }
   .futInfantil:hover{
     padding: 4rem;
@@ -240,9 +240,17 @@ input , textarea{
   }
 
   .h2--equipos{
-    font-size: 5rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 
+  }
+
+  .h1--equipos{
+    color:  rgb(34, 58, 177);;
+    font-size: 3rem;
+    padding: 2rem;
   }
   
 /*----------------------------- FIN EQUIPOS-------------------------------------*/
