--- a/homeStyle.css
+++ b/homeStyle.css
@@ -355,7 +355,10 @@ background-size: cover;
   border-radius: 10%;
   padding-bottom: 4rem;
   width:60rem;
+  transition: 1s linear;
   
+}.liga-1_historia img{
+  transition:linear;
 }
 
 .historia {
