--- a/homeStyle.css
+++ b/homeStyle.css
@@ -18,16 +18,12 @@ html, body {
 
 .gridd_home{
     display: grid;
-    grid-template-columns: 80% 20%;
-    /* grid-row: 5% 30% auto auto 10%; */
     justify-content: stretch;
 }
 
 
 .gridd_home_item{
-    /* border: 4px solid  black; */
     text-align: center;
-    /* line-height: 150px; */
 }
 
 
@@ -44,7 +40,6 @@ html, body {
 .flex_colum{
     display: flex;
     flex-direction: column;
-    /* gap: 1rem; */
 }
 
 .about_img{
@@ -56,7 +51,6 @@ html, body {
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: auto;
-    border: solid black;
 
 }
 
@@ -76,13 +70,11 @@ a{
     background-size: cover;
 
     height: 40rem;
-    grid-column: 1/3;
 
 }
 
 #menu{
     justify-content: space-around;
-    grid-column: 1/3;
     padding-top: 3rem;
     transition: 0.7s;
     background-color: white;
@@ -120,11 +112,19 @@ a{
 
 }
 .partidos_item{
-  border: solid black;
   position: relative;
   width: 30%;
 }
+/*-----------------------------Actualidad-------------------------------------*/
 
+.actualidad{
+  background-image: linear-gradient(to right, rgba(243, 242, 247,0), rgba(11, 4, 51, 1)), url("https://sdamorebieta.eus/wp-content/uploads/2022/12/etxano--1200x800.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 50% ;
+  height: 40rem;
+  width: 100%;
+}
 /*-----------------------------Formulario-------------------------------------*/
 form{
     width: 30%;
@@ -401,7 +401,6 @@ background-size: cover;
 /*-----------------------------footer-------------------------------------*/
 
 #footer{
-    grid-column: 1/3;
     background-image: linear-gradient(to right, rgba(48, 7, 231,0.8), rgba(230, 40, 40, 0.9)), url("https://sdamorebieta.eus/wp-content/uploads/2022/09/equipo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
