--- a/homeStyle.css
+++ b/homeStyle.css
@@ -446,3 +446,14 @@ background-size: cover;
 /*-----------------------------RESPONSIVO-------------------------------------*/
 
 
+
+
+
+
+
+
+
+
+
+
+/*-----------------------------FIN RESPONSIVO-------------------------------------*/
