diseño responsivo en development

--- a/homeStyle.css
+++ b/homeStyle.css
@@ -447,7 +447,38 @@ background-size: cover;
 
 /*Gorka Responsive*/ /* EQUIPO  */
 
+/*Tablet*/
 
+@media screen and (min-width:481) and (max-width:768px ) { 
+
+}
+
+/*Movil*/
+
+@media screen and (max-width: 480px) {
+ 
+  /* section {
+    width: 25%;
+  } */
+ .futProfesional, .amorePro{
+  width: 70%;
+ }
+
+ li {
+  font-size: 0.5rem;
+ }
+
+ .h1--equipos {
+  font-size: 0.5rem;
+ }
+
+ .h2--equipos {
+  font-size: 0.5rem;
+ }
+
+ .fotosCategorias {
+  width: 75%;
+ }
 
 
 
