--- a/homeStyle.css
+++ b/homeStyle.css
@@ -26,9 +26,6 @@ html, body {
     text-align: center;
 }
 
-
-
-
 .flex_row{
     display: flex;
     justify-content:center;
@@ -42,17 +39,10 @@ html, body {
     flex-direction: column;
 }
 
-.about_img{
-
-     width: 100%;
-
-}
-.about__flex_item{
-    flex-grow: 0;
-    flex-shrink: 1;
-    flex-basis: auto;
-
-}
+.flex_body_item{
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+} 
 
 
 a{
@@ -81,48 +71,43 @@ a{
     opacity:0.9;
 }
 
-.menu_logo{
- gap:0.5rem;
+.e{
+  align-items: center;
+
 }
+
 
 .logo{
     position: relative;
     width: 120%;
 }
 
-
 .h1--home{
 
-    color: rgba(247, 8, 8, 0.5);
-    background-image: url(./img/header-image.png);
+    /* color: rgba(247, 8, 8, 0.5); */
+    color:rgba(9,51,109,255);
+    /* background-image: url(./img/header-image.png); */
 
     background-clip: text;
     -webkit-background-clip:text ;
 
-    position: absolute;
+    position: relative;
     font-size: 90px;
-    padding-left: 30%;
-
 }
-/*-----------------------------Proximos Partidos-------------------------------------*/
-
-/* .escudoSDA{
-  width: 10%;
-  position: relative;
-
-} */
+/*--Proximos Partidos-------------------------------------*/
 
 .partidos_item{
   width: 30%;
-  border : solid black 4px;
-  justify-content: flex-start;
-  text-align: left;
+  align-items: flex-start;
+}
+.equipo_enfrentado{
+  align-items: center;
+  padding-top: 2rem;
 }
 
 .equipo_enfrentado_item{
-border: solid black 4px;
-width: 25%;
-text-align: center;
+  width: 25%;
+  text-align: center;
 }
 
 .escudoIC, .escudoRS{
@@ -143,7 +128,7 @@ text-align: center;
   width: 70%;
 }
 
-/*-----------------------------Actualidad-------------------------------------*/
+/*--Actualidad-------------------------------------*/
 
 .actualidad{
   background-image: linear-gradient(to right, rgba(243, 242, 247,0), rgba(11, 4, 51, 1)), url("https://sdamorebieta.eus/wp-content/uploads/2022/12/etxano--1200x800.jpg");
@@ -155,7 +140,6 @@ text-align: center;
 }
 
 .actualidad_item{
-  flex-basis: 30%;
   position: relative;
   width: 30%;
   text-align: left;
@@ -164,7 +148,7 @@ text-align: center;
   position: relative;
   width: 100%;
 }
-.ww{
+.foto_actualidad{
   position: relative;
   width: 90%;
 }
@@ -184,43 +168,149 @@ text-align: center;
 }
 
 
-.imp{
-  width: 2%;
+
+/*--Contactenos-------------------------------------*/
+.contact{
+  justify-content: center;
+
+}
+
+.contact_form{
+  padding-top: 2rem;
+  padding-left: 10rem;
+  justify-content: center;
+}
+
+.contact form{
+
+  width: 50%;
+  text-align: left;
+  margin:0px auto;
+
+}
+.contact  button[type=submit] {
+  width: 25%;
+  height: 3rem;
   position: relative;
-}
-/*-----------------------------Formulario-------------------------------------*/
-form{
-    width: 30%;
-    padding-left: 35%;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  background-color:rgb(46, 46, 112);
+  color: white;
+  padding-top:0.7rem;
+  padding-bottom:0.7rem;
+  border: none;
 }
 
-
-input , textarea{
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-width: 0.1rem;
-    border-color: rgb(128, 128, 128);
-    resize:none;
+.contact  input[type=text] {
+  width: 40%;
+  height: 3rem;
+  position: relative;
+  color: black;
 }
 
- input[type=submit] {
-    width: 4rem;
-    background-color: rgb(59, 139, 139);
-    color: white;
-    padding-top:0.7rem;
-    padding-bottom:0.7rem;
-    border-radius: 0.7rem;
+.contact_label{
+  width: 80%;
+  position: relative;
+  padding-top:0.7rem;
+  padding-bottom:0.7rem;
+}
+
+
+.contact button[type=submit]:hover {
+  background-image: linear-gradient( rgba(243, 242, 247,0), rgba(11, 4, 51, 1));
+  
+} 
+
+  /*--Clasificacion-------------------------------------*/
+  
+  .clasification_item{
+    height:300px;
+    width: 45%;
   }
 
-  input[type=submit]:hover {
-    background-color: #45a049;
+  .clasification_flex{
+    align-items: center;
+  }
+  .h2_clasification{
+    text-align: left;
+  }
+  
+  thead {
+    position: sticky;
+    top: 0;
+    background-color: rgb(247, 246, 253);
+    border: none;
+  }
+
+  tr, th, td{
+    border: none;
+
+  } 
+
+  tbody th{
+    width: 40%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  tr{
+    width: auto;
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+  }
+
+  .pos-club{
+    align-items: center;
+    justify-content: left;
+
+  }
+
+  .clasification_table{
+    overflow:scroll;
+  }
+
+  .imp{
+    width: 15%;
+    position: relative;
+  }
+
+  .ultimo_resultado{
+    width: 80%;
+    justify-content: flex-start;
+    text-align: left;
+  }
+ 
+  /*--Club-------------------------------------*/
+
+.club{
+    background-image: linear-gradient(to left, rgba(245, 245, 243,0), rgb(4, 4, 77)), url("https://sdamorebieta.eus/wp-content/uploads/2022/11/Amorebieta-Nucia-2--1200x800.jpg");
+    text-align: center;
+    background-position-y: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+  .club_panel{
+    gap: 0;
+  }
+
+ 
+  .club_videos{
+    width: 50%;
+    text-align: center;
+  }
+
+  iframe{
+    width: 40%;
+    height:200px;
+    position: relative;
+  }
+  .club_description{
+    text-align: left;
+    width: 45%;
+  }
+
+  .historia_home{
+    color: white ;
+    font-size:x-large;
   }
 
   /*-----------------------------EQUIPOS-------------------------------------*/
@@ -507,7 +597,7 @@ input , textarea{
 }
 
 
-/*-----------------------------RESPONSIVO-------------------------------------*/
+/*-----------------------------RESPONSIVE-------------------------------------*/
 
 /*Gorka Responsive*/ /* EQUIPO  */
 
