--- a/homeStyle.css
+++ b/homeStyle.css
@@ -63,7 +63,7 @@ a {
   opacity: 0.9;
 }
 
-.e{
+.logo_etiqueta{
   align-items: center;
 
 }
@@ -94,12 +94,12 @@ a {
 }
 .equipo_enfrentado{
   align-items: center;
+  justify-content: left;
   padding-top: 2rem;
 }
 
 .equipo_enfrentado_item{
   width: 25%;
-  text-align: center;
 }
 
 .escudoIC,
@@ -175,7 +175,7 @@ a {
 
 .contact_form{
   padding-top: 2rem;
-  padding-left: 10rem;
+  padding-left: 15rem;
   justify-content: center;
 }
 
@@ -224,8 +224,16 @@ a {
     width: 45%;
   }
 
+  .vs{
+    font-size: 2rem;
+  }
+  .equipo_enfrentado_item{
+    width: 20%;
+  }
+
   .clasification_flex{
     align-items: center;
+    gap: 5rem;
   }
   .h2_clasification{
     text-align: left;
